--- a/public/css/style.css
+++ b/public/css/style.css
@@ -390,3 +390,7 @@ textarea.form-control.is-invalid {
     overflow-y: auto;
     height: 250px !important;
 }
+
+strong {
+    font-weight: bold !important;
+}
