--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,600");
-
 @font-face {
     font-family: Ostrich;
     src: url("/fonts/ostrich-regular.ttf");
@@ -20,6 +18,7 @@ blockquote p {
 
 .alert ul {
     margin-bottom: 0;
+    padding-inline-start: 10px;
 }
 
 .modal-dialog .modal-content {
